# qec-lego-bench

./: .gitignore  .readthedocs.yaml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE.txt  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: publish-package.yml
docs/: conf.py  index.rst  requirements.txt
docs/api/: modules.rst  qec_lego_bench.cli.rst  qec_lego_bench.codes.circuit_level_codes.rst  qec_lego_bench.codes.noisy_codes.rst  qec_lego_bench.codes.rst  qec_lego_bench.codes.stabilizer_codes.css_codes.rst  qec_lego_bench.codes.stabilizer_codes.rst  qec_lego_bench.decoders.rst  qec_lego_bench.hpc.plotter.rst  qec_lego_bench.hpc.rst  qec_lego_bench.hpc.submitter.rst  qec_lego_bench.misc.rst  qec_lego_bench.noises.rst  qec_lego_bench.notebooks.rst  qec_lego_bench.rst
docs/notebooks/: Introduction.ipynb  Untitled.ipynb  Untitled1.ipynb  bb-codes.ipynb  compare-decoders.ipynb  explore-stim-erasure-support.ipynb  how-to-run-notebook-on-cluster.ipynb  index.rst  monte-carlo-sampling-on-cluster-mwpf-rsc.json-2  monte-carlo-sampling-on-cluster-mwpf.ipynb  monte-carlo-sampling-on-cluster.ipynb  paper-flow.ipynb  preliminary-decoder-compare.ipynb
docs/notebooks/evaluation/: dask-cluster.ipynb.ipynb  index.rst
docs/notebooks/evaluation/bp-tunner/: .gitignore
docs/notebooks/evaluation/compare-speed-mwpf-variants/: .gitignore  Makefile  README.md
docs/notebooks/evaluation/erasure-conversion/: .gitignore
docs/notebooks/evaluation/logical-error-rate/: .gitignore  create-evaluations.ipynb  create-notebooks.ipynb  example.ipynb  index.rst  template-simple.ipynb  template.ipynb
docs/notebooks/evaluation/speed/: compare-speed-on-different-computers.md  decoding_speed_bplsd.ipynb  decoding_speed_bplsd_it5.ipynb  decoding_speed_bposd.ipynb  decoding_speed_bposd_it5.ipynb  decoding_speed_bpuf.ipynb  decoding_speed_bpuf_it5.ipynb  decoding_speed_huf.ipynb  decoding_speed_mwpf.ipynb  decoding_speed_mwpf_026.ipynb  decoding_speed_mwpf_c1000.ipynb  decoding_speed_mwpm.ipynb  decoding_speed_mwpm_2.ipynb  decoding_speed_others.sh  decoding_time_plotter.py  plot.ipynb
src/qec_lego_bench/: __init__.py  __main__.py  skeleton.py  stats.py
src/qec_lego_bench.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/qec_lego_bench/cli/: __init__.py  codes.py  decoders.py  decoding_speed.py  generate_samples.py  logical_error_rate.py  multi_decoding_speed.py  noise.py  noises.py  predict_on_disk.py  util.py
src/qec_lego_bench/codes/: __init__.py  circuit_code.py  code.py
src/qec_lego_bench/codes/circuit_level_codes/: __init__.py  circuit_bb_code.py
src/qec_lego_bench/codes/noisy_codes/: __init__.py  noisy_color_code.py  noisy_repetition_code.py  noisy_rotated_surface_code.py  noisy_unrotated_surface_code.py
src/qec_lego_bench/codes/stabilizer_codes/: __init__.py  stabilizer_code.py
src/qec_lego_bench/decoders/: __init__.py  bplsd.py  bposd.py  bpuf.py  chromobius.py  decoder.py  fb.py  mwpf.py  profiling_decoder.py  relaybp.py
src/qec_lego_bench/hpc/: cluster_util.py  job_store.py  monte_carlo.py  panic_store.py
src/qec_lego_bench/hpc/plotter/: __init__.py  (+4 more)
src/qec_lego_bench/misc/: __init__.py  compare_01.py  heralded_dem.py  ref_circuit.py
src/qec_lego_bench/noises/: __init__.py  biased_noise.py  depolarize_noise.py  erasure_conversion.py  flip_noise.py  herald_detectors.py  no_noise.py  noise.py
src/qec_lego_bench/notebooks/: __init__.py  bp_tuner.ipynb  bp_tuner.py  common.py  compare_decoder.ipynb  compare_decoder.py  pL_p_compare_decoders.ipynb  pL_p_compare_decoders.py  speed_scaling.ipynb  speed_scaling.py  time_distribution.ipynb  time_distribution.py  trace_distribution.ipynb  trace_distribution.py
tests/: conftest.py  test_skeleton.py
tests/codes/: test_bb_code.py  test_triangular_color_code.py
tests/decoders/: README.md
tests/misc/: test_circuit_abs_rec.py  test_heralded_dem.py  test_ref_circuit.py
tutorial/: book.toml
tutorial/src/: developer-notes.md  yale-hpc-how-to-use-unison-for-file-sync.md
(+108 files in other folders)
